--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /aulas/aula-4/compass/stylesheets/
 
 Thumbs.db
+/aulas/aula-9/gulpbasic/node_modules/
+/aulas/aula-9/gulpbasic/bower_components/
+/aulas/aula-9/gulpbasic/dist/
