--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Thumbs.db
 /aulas/aula-9/gulpbasic/node_modules/
 /aulas/aula-9/gulpbasic/bower_components/
 /aulas/aula-9/gulpbasic/dist/
+/aulas/aula-10/atividade-1/node_modules/
+/aulas/aula-10/atividade-1/dist/
+/aulas/aula-10/atividade-1/bower_components/
