--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 /aulas/aula-4/**/.sass-cache/
 /aulas/aula-4/compass/stylesheets/
 
-Thumbs.db
-/aulas/aula-9/gulpbasic/node_modules/
-/aulas/aula-9/gulpbasic/bower_components/
 /aulas/aula-9/gulpbasic/dist/
-/aulas/aula-10/atividade-1/node_modules/
-/aulas/aula-10/atividade-1/dist/
-/aulas/aula-10/atividade-1/bower_components/
+/aulas/**/node_modules/
+/aulas/**/bower_components/
+
+/aulas/aula-10/**/dist/
+
